--- a/f/fr/fro/frontgatetickets.com.html
+++ b/f/fr/fro/frontgatetickets.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the frontgatetickets.com privacy policy that was archived on 2007-11-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071113070758id_/http%3A//www.frontgatetickets.com/portal/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the frontgatetickets.com privacy policy that was archived on 2008-01-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080112195322id_/http%3A//frontgatetickets.com/portal/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
 		<link rel="icon" href="http://static.independenttickets.com/common/favicon.ico" type="image/x-icon">
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="http://static.independenttickets.com/lic/lid_7/styles.css" type="text/css">
 	 	<script type="text/javascript" src="http://static.independenttickets.com/common/portal.js"></script>
 	 	<meta name="description" content="Front Gate Tickets sells tickets to fanclubs, music events, festivals and performing arts through our outlets, online and with our friendly call center.">
-		<meta name="keywords" content="Front Gate, Solutions, Tickets, Events, Music, Venue, Outlets, Tix, Artists, Performance">
+		<meta name="keywords" content="Front Gate, Solutions, Tickets, Events, Music, Venue, Austin, Tix, Artists, Performance, Dallas, TX">
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="-1">
 		<title>Front Gate Tickets : Privacy &amp; Security Statement</title>
@@ -43,9 +43,9 @@
 				<div>
 				<table class="calendar">
 					<tbody><tr>
-						<td class="monthnav"><a href="/portal/privacy.php?t=1192251600">&lt;&lt;</a></td>
-						<td class="month" colspan="5">November 2007</td>
-						<td class="monthnav"><a href="/portal/privacy.php?t=1197525600">&gt;&gt;</a></td>
+						<td class="monthnav"><a href="/portal/privacy.php?t=1197439200">&lt;&lt;</a></td>
+						<td class="month" colspan="5">January 2008</td>
+						<td class="monthnav"><a href="/portal/privacy.php?t=1202796000">&gt;&gt;</a></td>
 					</tr>
 					<tr>
 													<td class="weekday">Su</td>
@@ -57,49 +57,49 @@
 													<td class="weekday">Sa</td>
 											</tr>
 											<tr>
-															<td class="notmonth"><a href="/portal/results.php?search=1&amp;t=1193547600">28</a></td>
-															<td class="notmonth"><a href="/portal/results.php?search=1&amp;t=1193634000">29</a></td>
-															<td class="notmonth"><a href="/portal/results.php?search=1&amp;t=1193720400">30</a></td>
-															<td class="notmonth"><a href="/portal/results.php?search=1&amp;t=1193806800">31</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1193893200"> 1</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1193979600"> 2</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1194066000"> 3</a></td>
+															<td class="notmonth"><a href="/portal/results.php?search=1&amp;t=1198994400">30</a></td>
+															<td class="notmonth"><a href="/portal/results.php?search=1&amp;t=1199080800">31</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1199167200"> 1</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1199253600"> 2</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1199340000"> 3</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1199426400"> 4</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1199512800"> 5</a></td>
 													</tr>
 											<tr>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1194152400"> 4</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1194242400"> 5</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1194328800"> 6</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1194415200"> 7</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1194501600"> 8</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1194588000"> 9</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1194674400">10</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1199599200"> 6</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1199685600"> 7</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1199772000"> 8</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1199858400"> 9</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1199944800">10</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1200031200">11</a></td>
+															<td class="selected"><a href="/portal/results.php?search=1&amp;t=1200117600">12</a></td>
 													</tr>
 											<tr>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1194760800">11</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1194847200">12</a></td>
-															<td class="selected"><a href="/portal/results.php?search=1&amp;t=1194933600">13</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1195020000">14</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1195106400">15</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1195192800">16</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1195279200">17</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1200204000">13</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1200290400">14</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1200376800">15</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1200463200">16</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1200549600">17</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1200636000">18</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1200722400">19</a></td>
 													</tr>
 											<tr>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1195365600">18</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1195452000">19</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1195538400">20</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1195624800">21</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1195711200">22</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1195797600">23</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1195884000">24</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1200808800">20</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1200895200">21</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1200981600">22</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1201068000">23</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1201154400">24</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1201240800">25</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1201327200">26</a></td>
 													</tr>
 											<tr>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1195970400">25</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1196056800">26</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1196143200">27</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1196229600">28</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1196316000">29</a></td>
-															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1196402400">30</a></td>
-															<td class="notmonth"><a href="/portal/results.php?search=1&amp;t=1196488800"> 1</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1201413600">27</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1201500000">28</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1201586400">29</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1201672800">30</a></td>
+															<td class="inmonth"><a href="/portal/results.php?search=1&amp;t=1201759200">31</a></td>
+															<td class="notmonth"><a href="/portal/results.php?search=1&amp;t=1201845600"> 1</a></td>
+															<td class="notmonth"><a href="/portal/results.php?search=1&amp;t=1201932000"> 2</a></td>
 													</tr>
 									</tbody></table>
 				</div>
@@ -111,27 +111,16 @@
 					<option label="Alabama" value="AL">Alabama</option>
 <option label="Arizona" value="AZ">Arizona</option>
 <option label="California" value="CA">California</option>
-<option label="Colorado" value="CO">Colorado</option>
 <option label="District Of Columbia" value="DC">District Of Columbia</option>
 <option label="Florida" value="FL">Florida</option>
-<option label="Georgia" value="GA">Georgia</option>
 <option label="Iowa" value="IA">Iowa</option>
 <option label="Illinois" value="IL">Illinois</option>
 <option label="Louisiana" value="LA">Louisiana</option>
-<option label="Massachusetts" value="MA">Massachusetts</option>
-<option label="Michigan" value="MI">Michigan</option>
-<option label="Minnesota" value="MN">Minnesota</option>
 <option label="Montana" value="MT">Montana</option>
-<option label="New Hampshire" value="NH">New Hampshire</option>
-<option label="New York" value="NY">New York</option>
-<option label="Ohio" value="OH">Ohio</option>
 <option label="Oregon" value="OR">Oregon</option>
-<option label="Pennsylvania" value="PA">Pennsylvania</option>
-<option label="Rhode Island" value="RI">Rhode Island</option>
 <option label="Texas" value="TX">Texas</option>
 <option label="Utah" value="UT">Utah</option>
 <option label="Vermont" value="VT">Vermont</option>
-<option label="Washington" value="WA">Washington</option>
 
 					</select>
 					<input type="SUBMIT" class="submit" name="" value="go">
@@ -252,7 +241,7 @@ Special Offers and Updates</h2>
 	
 			<div class="footer">	
 				<a href="http://www.frontgatesolutions.com">Sell your own tickets</a> <img src="http://static.independenttickets.com/common/fgsico.gif" width="16" height="16" alt="Ticketman Logo">
-				©2003-2007  <a href="http://www.frontgatesolutions.com">Front Gate Solutions, Inc.</a> All Rights Reserved. Powered by <a href="http://www.frontgatesolutions.com">Front Gate Solutions, Inc.</a>
+				©2003-2008  <a href="http://www.frontgatesolutions.com">Front Gate Solutions, Inc.</a> All Rights Reserved. Powered by <a href="http://www.frontgatesolutions.com">Front Gate Solutions, Inc.</a>
 			</div>				
 		</div>		
 	
