--- a/w/wy/wye/wyevalegardencentres.co.uk.html
+++ b/w/wy/wye/wyevalegardencentres.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wyevalegardencentres.co.uk privacy policy that was archived on 2007-10-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071026011334id_/http%3A//www.wyevale.co.uk/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wyevalegardencentres.co.uk privacy policy that was archived on 2008-01-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080115060112id_/http%3A//www.wyevale.co.uk/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
 	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -50,64 +50,107 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 <body>
 
   <div id="header"><table width="720" height="118" border="0" cellpadding="0" cellspacing="0">
-  <tbody><tr>
-    <td align="right" valign="top" background="http://www.wyevale.co.uk/images/header_carbon_bk.gif">
-      <a href="javascript:;" onclick="MM_openBrWindow('https://www.surveymonkey.com/s.aspx?sm=1P0CNuXlt4KfT0dPLXO10Q_3d_3d','green','scrollbars=yes,width=630,height=760')"><img src="http://www.wyevale.co.uk/images/howgreensurvey2.gif" width="356" height="76" border="0"></a><table border="0" cellpadding="0" cellspacing="0">
-        <tbody><tr>
-          
-        </tr>
-      </tbody></table>
-    </td>
-  </tr>
+<tbody><tr>
+	<td width="249" valign="bottom"><a href="index.asp"><img src="images/petersen/logo.gif" width="249" height="99" border="0"></a><br><img src="images/petersen/spacer.gif" alt="" width="10" height="11"><br></td>
+	<td width="471" align="right" valign="bottom"><img src="images/petersen/strapline.gif" width="277" height="17"><br>
+	<img src="images/petersen/spacer.gif" alt="" width="10" height="11"></td>
+</tr>
 </tbody></table>
 </div>
   <div id="navcontainer"><script language="JavaScript1.2">
+
 function disable_right_click(e)
+
 {
+
     var browser = navigator.appName.substring ( 0, 9 );
+
     var event_number = 0;
+
     if (browser=="Microsoft")
+
         event_number = event.button;
+
     else if (browser=="Netscape")
+
         event_number = e.which;
+
     if ( event_number==2 || event_number==3 )
+
         {
+
         alert ("Images © Wyevale Garden Centres Ltd.");
+
         return (false);
+
         }
+
     return (true);
+
 }
+
+
+
 
 
 function trap_images_mouse_events ()
+
 {
+
     if ( document.images )
+
         {
+
         for (var pic=0; pic<document.images.length; pic++)
+
             document.images[pic].onmousedown = disable_right_click;
+
         }
+
+
 
 }
 
+
+
 window.onload = trap_images_mouse_events;
+
 </script>
+
+
 
 <ul>
 
-<li><a href="http://www.wyevale.co.uk/">Home</a></li> 
+
+
+<li><a href="index.asp">Home</a></li> 
+
+
 
 <li><a href="http://www.wyevaledirect.co.uk/">Online Shop</a></li>
 
-<li><a href="http://www.wyevale.co.uk/centrelocator.asp">Store Finder</a></li>
+
+
+<li><a href="centrelocator.asp">Store Finder</a></li>
+
+
 
 <li><a href="http://wyevale.shootgardening.co.uk/">Plant Finder</a></li>
-<img src="http://www.wyevale.co.uk/images/petersen/menu_pot.jpg" alt="" width="32" height="23" align="left" id="menu_pot"> 
-<li onmouseover="MM_swapImage('menu_pot','','http://www.wyevale.co.uk/images/petersen/menu_pot.gif',0)" onmouseout="MM_swapImgRestore()"><a href="http://www.wyevale.co.uk/community.asp">The Potting Shed </a></li>
 
-<li><a href="http://www.wyevale.co.uk/careers.asp">Working at Wyevale</a></li>
+<img src="images/petersen/menu_pot.jpg" alt="" width="32" height="23" align="left" id="menu_pot"> 
 
-<li><a href="http://www.wyevale.co.uk/contact.asp">Contact Us</a></li>
+<li onmouseover="MM_swapImage('menu_pot','','images/petersen/menu_pot.gif',0)" onmouseout="MM_swapImgRestore()"><a href="community.asp">The Potting Shed </a></li>
+
+
+
+<li><a href="careers.asp">Working at Wyevale</a></li>
+
+
+
+<li><a href="contact.asp">Contact Us</a></li>
+
 </ul>
+
 </div>
   
   <div id="container">
@@ -169,82 +212,133 @@ window.onload = trap_images_mouse_events;
       </p>
       <br><br>
       </div>
-<div id="newsideboxall">	 <table width="210" border="0" align="center" cellpadding="0" cellspacing="0" onclick="window.open('http://www.zmag.dk/showmag.php?mid=wpgsr');" onmouseover="this.style.cursor='pointer';" onmouseout="this.style.cursor='default';">
-       <tbody><tr>
-         <td width="101" height="60" valign="top" bgcolor="#FFFFFF" class="side_button"><div class="side_button_content" id="side_button">
-           <div align="left"><strong class="side_button_title">Catalogue</strong><br>
-             View our catalogue online. <br>
-           </div>
-         </div></td>
-         <td width="109" rowspan="2" bgcolor="#FFFFFF" class="side_button"><img src="images/petersen/brochure_main.jpg" alt="" width="90" height="71"></td>
-       </tr>
-       <tr>
-         <td height="22" valign="top" bgcolor="#FFFFFF" class="side_button"><div align="left"><span class="button_lightgreen">MORE INFO</span></div>
-         <div id="div7" class="linebreaker"></div></td>
-       </tr>
-     </tbody></table>
-	 <div id="linebreaker" class="linebreaker"></div>
-	 <table width="210" border="0" align="center" cellpadding="0" cellspacing="0" onclick="window.location='community.asp';" onmouseover="this.style.cursor='pointer';" onmouseout="this.style.cursor='default';">
-       <tbody><tr>
-         <td width="143" height="60" valign="top" bgcolor="#FFFFFF" class="side_button"><div class="side_button_content" id="div8">
-             <div align="left"><strong class="side_button_title">The Potting Shed </strong><br>
-               Gardeners diary, monthly advice &amp; 
-               visitor forum.<br>
-             </div>
-         </div></td>
-         <td width="67" rowspan="2" bgcolor="#FFFFFF" class="side_button"><img src="images/petersen/pots_main.jpg" alt="" width="51" height="62"></td>
-       </tr>
-       <tr>
-         <td height="22" valign="top" bgcolor="#FFFFFF" class="side_button"><div align="left"><span class="button_lightgreen">MORE INFO</span></div>
-         <div id="div10" class="linebreaker"></div></td>
-       </tr>
-     </tbody></table>
-	 <div id="div9" class="linebreaker"></div>
-	 <table width="210" border="0" align="center" cellpadding="0" cellspacing="0" onclick="window.location='newsletter.asp';" onmouseover="this.style.cursor='pointer';" onmouseout="this.style.cursor='default';">
-       <tbody><tr>
-         <td height="60" valign="top" bgcolor="#FFFFFF" class="side_button"><div class="side_button_content" id="div2">
-             <div align="left"><strong class="side_button_title">Free Newsletter </strong><br>
-               Sign up to receive regular updates on our product ranges and exclusive special offers. <br>
-             </div>
-         </div></td>
-       </tr>
-       <tr>
-         <td height="22" valign="top" bgcolor="#FFFFFF" class="side_button"><div align="left"><span class="button_lightgreen">SIGN UP</span></div>
-         <div id="div4" class="linebreaker"></div></td>
-       </tr>
-     </tbody></table>
-	 <div id="div6" class="linebreaker"></div>
-	 <table width="210" border="0" align="center" cellpadding="0" cellspacing="0" onclick="window.open('http://www.awin1.com/cread.php?s=58431&amp;v=1268&amp;q=46516&amp;r=70131');" onmouseover="this.style.cursor='pointer';" onmouseout="this.style.cursor='default';">
-       <tbody><tr>
-         <td width="101" height="60" valign="top" bgcolor="#FFFFFF" class="side_button"><div class="side_button_content" id="div">
-             <div align="left"><strong class="side_button_title">Just To Say </strong><br>
-               Send flowers to <br>
-               someone special.<br>
-               <strong class="freedelivery">FREE Delivery!</strong><br>
-             </div>
-         </div></td>
-         <td width="109" rowspan="2" bgcolor="#FFFFFF" class="side_button" style="background-image:url(images/petersen/flowers_main.jpg); background-position: bottom; background-repeat: no-repeat; ">&nbsp;</td>
-       </tr>
-       <tr>
-         <td height="22" valign="top" bgcolor="#FFFFFF" class="side_button"><div align="left"><span class="button_lightgreen">SEND NOW</span></div>
-         <div id="div11" class="linebreaker"></div></td>
-       </tr>
-     </tbody></table>
-	 <div id="div5" class="linebreaker"></div>
-	 <table width="210" border="0" align="center" cellpadding="0" cellspacing="0" onclick="window.open('http://wyevale.hirestation.co.uk');" onmouseover="this.style.cursor='pointer';" onmouseout="this.style.cursor='default';">
-       <tbody><tr>
-         <td width="101" height="60" valign="top" bgcolor="#FFFFFF" class="side_button"><div class="side_button_content" id="div3">
-             <div align="left"><strong class="side_button_title">Hire Station </strong><br>
-               Tools and small machinery hire.<br>
-             </div>
-         </div></td>
-         <td width="109" rowspan="2" bgcolor="#FFFFFF" class="side_button"><img src="images/petersen/hire_main.jpg" alt="" width="90" height="78"></td>
-       </tr>
-       <tr>
-         <td height="22" valign="top" bgcolor="#FFFFFF" class="side_button"><div align="left"><span class="button_lightgreen">MORE INFO</span></div>
-         <div id="div12" class="linebreaker"></div></td>
-       </tr>
-     </tbody></table>
+<div id="newsideboxall"><!-- CATALOGUE -->
+<table width="210" border="0" align="center" cellpadding="0" cellspacing="0" onclick="window.open('documents/GrowYOwn1.pdf');" onmouseover="this.style.cursor='pointer';" onmouseout="this.style.cursor='default';">
+<tbody><tr>
+	<td width="101" height="60" valign="top" bgcolor="#FFFFFF" class="side_button">
+	<div class="side_button_content" id="side_button">
+	<div align="left">
+	<strong class="side_button_title">Grow Your Own</strong>
+	<br>
+	Download our free guide. 
+	<br>
+	</div>
+	</div>
+	</td>
+	<td width="109" rowspan="2" bgcolor="#FFFFFF" class="side_button"><img src="images/petersen/spuds.jpg" alt="" width="100" height="70"></td>
+</tr>
+<tr>
+	<td height="22" valign="top" bgcolor="#FFFFFF" class="side_button">
+	<div align="left"><span class="button_lightgreen">MORE INFO</span></div>
+	<div id="div7" class="linebreaker"></div>
+	</td>
+</tr>
+</tbody></table>
+<!-- CATALOGUE END -->
+
+<div id="linebreaker" class="linebreaker"></div>
+
+<!--  POTTING SHED -->
+<table width="210" border="0" align="center" cellpadding="0" cellspacing="0" onclick="window.location='community.asp';" onmouseover="this.style.cursor='pointer';" onmouseout="this.style.cursor='default';">
+<tbody><tr>
+	<td width="143" height="60" valign="top" bgcolor="#FFFFFF" class="side_button">
+	<div class="side_button_content" id="div8">
+	<div align="left">
+	<strong class="side_button_title">The Potting Shed </strong>
+	<br>
+	Gardeners diary, monthly advice &amp; visitor forum.
+	<br>
+	</div>
+	</div>
+	</td>
+	<td width="67" rowspan="2" bgcolor="#FFFFFF" class="side_button"><img src="images/petersen/pots_main.jpg" alt="" width="51" height="62"></td>
+</tr>
+<tr>
+	<td height="22" valign="top" bgcolor="#FFFFFF" class="side_button">
+	<div align="left"><span class="button_lightgreen">MORE INFO</span></div>
+	<div id="div10" class="linebreaker"></div>
+	</td>
+</tr>
+</tbody></table>
+<!--  POTTING SHED END -->
+
+<div id="div9" class="linebreaker"></div>
+
+<!-- NEWS LETTER -->
+<table width="210" border="0" align="center" cellpadding="0" cellspacing="0" onclick="window.location='newsletter.asp';" onmouseover="this.style.cursor='pointer';" onmouseout="this.style.cursor='default';">
+<tbody><tr>
+	<td height="60" valign="top" bgcolor="#FFFFFF" class="side_button">
+	<div class="side_button_content" id="div2">
+	<div align="left">
+	<strong class="side_button_title">Free Newsletter </strong>
+	<br>
+	Sign up to receive regular updates on our product ranges and exclusive special offers. 
+	<br>
+	</div>
+	</div>
+	</td>
+</tr>
+<tr>
+	<td height="22" valign="top" bgcolor="#FFFFFF" class="side_button">
+	<div align="left"><span class="button_lightgreen">SIGN UP</span></div>
+	<div id="div4" class="linebreaker"></div>
+	</td>
+</tr>
+</tbody></table>
+<!-- NEWS LETTER END -->
+
+<div id="div6" class="linebreaker"></div>
+
+<!--  FLYING FLOWERS -->
+<table width="210" border="0" align="center" cellpadding="0" cellspacing="0" onclick="window.open('http://awin1.com/awclick.php?awinmid=1286&amp;awinaffid=70131&amp;p=http://www.flyingflowers.com/ffechannel/static/index.cfm');" onmouseover="this.style.cursor='pointer';" onmouseout="this.style.cursor='default';">
+<tbody><tr>
+	<td width="101" height="60" valign="top" bgcolor="#FFFFFF" class="side_button">
+	<div class="side_button_content" id="div">
+	<div align="left">
+	<strong class="side_button_title">Just To Say </strong>
+	<br>
+	<!--    Send flowers to <br />
+	someone special.<br /> -->
+	<strong class="freedelivery">Stunning flower bouquets <br>FREE DELIVERY!</strong>
+	<br>
+	</div>
+	</div>
+	</td>
+	<td width="109" rowspan="2" bgcolor="#FFFFFF" class="side_button" style="background-image:url(images/petersen/wyevale_106x84_A.jpg); background-position: bottom; background-repeat: no-repeat; ">&nbsp;</td>
+</tr>
+<tr>
+	<td height="22" valign="top" bgcolor="#FFFFFF" class="side_button">
+	<div align="left"><span class="button_lightgreen">SEND NOW</span></div>
+	<div id="div11" class="linebreaker"></div>
+	</td>
+</tr>
+</tbody></table>
+<!--  FLYING FLOWERS END -->
+
+<div id="div5" class="linebreaker"></div>
+
+<!-- HIRE STATION -->
+<table width="210" border="0" align="center" cellpadding="0" cellspacing="0" onclick="window.open('http://wyevale.hirestation.co.uk');" onmouseover="this.style.cursor='pointer';" onmouseout="this.style.cursor='default';">
+<tbody><tr>
+	<td width="101" height="60" valign="top" bgcolor="#FFFFFF" class="side_button">
+	<div class="side_button_content" id="div3">
+	<div align="left"><strong class="side_button_title">Hire Station </strong>
+	<br>
+	Tools and small machinery hire.
+	<br>
+	</div>
+	</div>
+	</td>
+	<td width="109" rowspan="2" bgcolor="#FFFFFF" class="side_button"><img src="images/petersen/hire_main.jpg" alt="" width="90" height="78"></td>
+</tr>
+<tr>
+	<td height="22" valign="top" bgcolor="#FFFFFF" class="side_button">
+	<div align="left"><span class="button_lightgreen">MORE INFO</span></div>
+	<div id="div12" class="linebreaker"></div>
+	</td>
+</tr>
+</tbody></table>
+<!-- HIRE STATION END -->
 </div>
 
 <div id="home_full" style="font-family:Arial, Helvetica, sans-serif;">
@@ -294,6 +388,11 @@ window.onload = trap_images_mouse_events;
             <td height="14"><div align="left"><img src="http://www.wyevale.co.uk/images/petersen/bullet.jpg" alt="" width="7" height="7"></div></td>
             <td height="14"><div align="left"><a href="http://www.wyevale.co.uk/tuesdaycard.asp" class="footer_content">Over 60's Card</a></div></td>
           </tr>
+          <tr>
+            <td height="14"><div align="left"><img src="http://www.wyevale.co.uk/images/petersen/bullet.jpg" alt="" width="7" height="7"></div></td>
+            <td height="14"><div align="left"><a href="http://www.wyevaledirect.co.uk/index.php?page=affiliates" class="footer_content">Affiliate Programme</a></div></td>
+          </tr>
+          
         </tbody></table>
       </div></td>
       <td width="1" valign="top" bgcolor="#CCCCCC"><div align="left"><img src="http://www.wyevale.co.uk/images/petersen/spacer.gif" alt="" width="1" height="1"></div></td>
