--- a/1/14/14d/14dayz.com.html
+++ b/1/14/14d/14dayz.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the 14dayz.com privacy policy that was archived on 2007-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229080442id_/http%3A//www.14dayz.com/en/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 14dayz.com privacy policy that was archived on 2008-01-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080130154445id_/http%3A//www.14dayz.com/en/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
     <title>14Dayz.com - Time Tracking Made Simple</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 	<meta name="robots" content="noindex, nofollow">	
 	<script src="../js/prototype.js" type="text/javascript"></script>
-	<script src="../js/scriptaculous.js" type="text/javascript"></script><script type="text/javascript" src="https://web.archive.org/web/20071229080442id_/http%3A//www.14dayz.com/js/builder.js"></script><script type="text/javascript" src="https://web.archive.org/web/20071229080442id_/http%3A//www.14dayz.com/js/effects.js"></script><script type="text/javascript" src="https://web.archive.org/web/20071229080442id_/http%3A//www.14dayz.com/js/dragdrop.js"></script><script type="text/javascript" src="https://web.archive.org/web/20071229080442id_/http%3A//www.14dayz.com/js/controls.js"></script><script type="text/javascript" src="https://web.archive.org/web/20071229080442id_/http%3A//www.14dayz.com/js/slider.js"></script>
+	<script src="../js/scriptaculous.js" type="text/javascript"></script><script type="text/javascript" src="https://web.archive.org/web/20080130154445id_/http%3A//www.14dayz.com/js/builder.js"></script><script type="text/javascript" src="https://web.archive.org/web/20080130154445id_/http%3A//www.14dayz.com/js/effects.js"></script><script type="text/javascript" src="https://web.archive.org/web/20080130154445id_/http%3A//www.14dayz.com/js/dragdrop.js"></script><script type="text/javascript" src="https://web.archive.org/web/20080130154445id_/http%3A//www.14dayz.com/js/controls.js"></script><script type="text/javascript" src="https://web.archive.org/web/20080130154445id_/http%3A//www.14dayz.com/js/slider.js"></script>
 	<script src="../js/corners.js" type="text/javascript"></script>
 	
 	
@@ -17,12 +17,7 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="../styles/ie6.css" />
 	<![endif]-->
 	
-	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>			<script type="text/javascript">
-			_uacct = "UA-82621-5";
-			_udn="14dayz.com";
-			urchinTracker();
-			</script>
-				
+		
 	
 </head>
 <body>
@@ -44,7 +39,7 @@
 						<div class="navigation">
 				<ul>
 					<li><a href="../site/en/home/">Home</a></li>
-					<li><a href="casestudy-story1.php">Case studies</a></li>
+					<li><a href="casestudy-list.php">Case studies</a></li>
 					<li><a href="vision.php">Vision</a></li>
 					
 					<li><a href="tour-mainmenu.php">Tour</a></li>
@@ -179,7 +174,7 @@
 			<div class="linksRight">
 				<ul>
 					<li><a href="../index.php">Home</a></li>
-					<li><a href="casestudy-story1.php">Case studies</a></li>
+					<li><a href="casestudy-list.php">Case studies</a></li>
 				<li><a href="vision.php">Vision</a></li><li><a href="tour-mainmenu.php">Tour</a></li>					<li><a href="../site/en/home/pricing">Pricing</a></li>
 					<li><a href="../site/en/home/signup">Sign-up</a></li>
 				<li><a href="profile.php">Profile</a></li><li><a href="buzz.php">Buzz</a></li>				<li><a href="http://blog.brains4all.com/brainblog/">Blog</a></li>
@@ -187,7 +182,7 @@
 			</div>
 		</div>
 		<div class="footerContainerBottom">
-			© 2007 All rights reserved &nbsp;•&nbsp; 14Dayz is a service of <a href="http://www.brains4all.com" rel="external"><b>Brains4All B.V.</b></a>, P.O. Box 14, Kamperland, The Netherlands<br>
+			© 2008 All rights reserved &nbsp;•&nbsp; 14Dayz is a service of <a href="http://www.brains4all.com" rel="external"><b>Brains4All B.V.</b></a>, P.O. Box 14, Kamperland, The Netherlands<br>
 			<script type="text/javascript">
 				document.write(String.fromCharCode(60,97,32,104,114,101,102,61,34,109,97,105,108,116,111,58,115,117,112,112,111,114,116,64,49,52,100,97,121,122,46,99,111,109,34,62,60,98,62,115,117,112,112,111,114,116,64,49,52,100,97,121,122,46,99,111,109,60,47,98,62,60,47,97,62));
 			</script><a href="mailto:support@14dayz.com"><b>support@14dayz.com</b></a> &nbsp;•&nbsp; Tel +31(113) 373 919 &nbsp;•&nbsp; Fax +31(113) 373 967<br>
@@ -195,6 +190,10 @@
 		</div>
 	</div>
 </div>
-
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script><script type="text/javascript">
+_uacct = "UA-338180-2";
+_udn="14dayz.com";
+urchinTracker();
+</script>	    	
 
 </body></html>
